fix the alignment and the color and the overflow

--- a/style.css
+++ b/style.css
@@ -1,3 +1,54 @@
 .errorNotifying {
     display: none;
 }
+
+body,
+html {
+    height: 100%;
+    margin: 0;
+    overflow: hidden;
+}
+
+#main {
+
+    max-width: 80rem;
+    /* 80rem is roughly equivalent to max-w-7xl in Tailwind CSS */
+    margin-left: auto;
+    margin-right: auto;
+    border: 1px solid black;
+    margin-top: 20px;
+    color: #007FFF;
+}
+
+#main2 {
+
+    max-width: 80rem;
+    /* 80rem is roughly equivalent to max-w-7xl in Tailwind CSS */
+    margin-left: auto;
+    margin-right: auto;
+    border: 1px solid black;
+    margin-top: 10px;
+    color: #318CE7;
+}
+
+.gap {
+    margin-left: 10px;
+}
+
+.inputs {
+    display: flex;
+    flex-direction: column;
+    width: 180px;
+}
+
+.input-gap {
+    margin-bottom: 10px;
+
+}
+
+button:hover {
+    background-color: #007FFF;
+    color: white;
+    /* Optional: Change text color to white on hover */
+    border: 1px solid #007FFF;
+}
